# customer-churn

./: .dockerignore  .env.docker  .gitignore  DOCKER-README.md  Dockerfile  HEROKU_DEPLOYMENT.md  Procfile  README.md  app.json  bash.exe.stackdump  create_sample_data.py  debug_heroku.py  deploy_heroku.bat  deploy_heroku.sh  docker-compose.yml  heroku.yml  init_heroku.py  pyproject.toml
assets/: create_architecture.py  create_visualizations.py
config/: users.json
data/: download_data.sh
models/: churn_prediction_model.pkl  feature_scaler.pkl  label_encoders.pkl  model_features.pkl  model_info.txt  model_metadata.pkl
notebooks/: 01 - EDA.ipynb  01-EDA.ipynb  02 - Modelling.ipynb  02-Modelling.ipynb
outputs/: 01-EDA.html  01-EDA.qmd  02-Modelling.html  02-Modelling.qmd
src/backend/: Dockerfile
src/backend/api/: main.py
src/backend/api/schemas/: __init__.py  models.py
src/frontend/: Dockerfile  README.md  __init__.py  app.py  auth.py  config.py  prediction_service.py
src/frontend/config/: README.md
src/frontend/pages/: 1_🎯_Churn_Prediction.py  2_📊_EDA_Analysis.py  3_🤖_Model_Details.py  4_⚙️_Admin_Panel.py
